--- a/src/AppBundle/Resources/views/App/index.html.twig
+++ b/src/AppBundle/Resources/views/App/index.html.twig
@@ -1,17 +1,35 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block content %}
+    <div class="row column">
+        <div class="medium-2 columns">
+            <a href="#"><div class="stat">{{ nbCalorie }}</div><span>Calorie Total</span></a>
+        </div>
+        <div class="medium-10 columns">
+            <div class="progress" role="progressbar" tabindex="0" aria-valuenow="50" aria-valuemin="0" aria-valuetext="50 percent" aria-valuemax="100">
+                <div class="progress-meter" style="width: 50%"></div>
+            </div>
+        </div>
+    </div>
+    <hr>
     <div class="row">
         <div class="medium-4 columns">
             <img class="thumbnail" src="http://placehold.it/750x350">
+            <hr>
+            <div class="row">
+                <div class="medium-12 columns text-center">
+                    <p class="calorie">Calorie total</p>
+                    <p class="calorieNb"></p>
+                </div>
+            </div>
         </div>
         <div class="medium-8 columns">
-            <h2>Our Agency, our selves.</h2>
+            <h3>Mes consos</h3>
             <table>
                 <thead>
                 <tr>
                     <th width="200">Picto</th>
-                    <th>Consomation</th>
+                    <th>Consos</th>
                     <th width="150">Calorie</th>
                     <th>Bu / manger à :</th>
                     <th></th>
@@ -53,14 +71,5 @@
         </div>
     </div>
     <hr>
-    <div class="row column">
-        <ul class="vertical medium-horizontal menu expanded text-center">
-            <li><a href="#"><div class="stat">28</div><span>Websites</span></a></li>
-            <li><a href="#"><div class="stat">43</div><span>Apps</span></a></li>
-            <li><a href="#"><div class="stat">95</div><span>Ads</span></a></li>
-            <li><a href="#"><div class="stat">59</div><span>Cakes</span></a></li>
-            <li><a href="#"><div class="stat">18</div><span>Logos</span></a></li>
-        </ul>
-    </div>
 {% endblock %}
 
