--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -10,7 +10,7 @@
     <title>App - Hackathon</title>
     <link rel="stylesheet" href="{{ asset('assets/foundation-6/css/foundation.min.css') }}" />
     <link rel="stylesheet" href="{{ asset('assets/font-awesome/css/font-awesome.min.css') }}" />
-
+    <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}" />
 </head>
 
 <body>
@@ -19,16 +19,11 @@
     <div class="top-bar-left">
         <ul class="menu">
             <li class="menu-text">Yeti Agency</li>
-            <li><a href="#">One</a></li>
-            <li><a href="#">Two</a></li>
         </ul>
     </div>
     <div class="top-bar-right">
         <ul class="menu">
-            <li><a href="#">Three</a></li>
-            <li><a href="#">Four</a></li>
-            <li><a href="#">Five</a></li>
-            <li><a href="#">Six</a></li>
+            <li><a href="#">Info</a></li>
         </ul>
     </div>
 </div>
