--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -5,3 +5,16 @@
 .calorieNb {
     font-size: 50px;
 }
+
+.message-level{
+    color: #666666;
+}
+
+.img-conso{
+    width: 60px;
+    height: 60px;
+}
+
+.btn-suppr{
+    font-size: 16px;
+}
