--- a/src/AppBundle/Resources/views/App/index.html.twig
+++ b/src/AppBundle/Resources/views/App/index.html.twig
@@ -9,25 +9,25 @@
             {% if levelPercentage < 10 %}
                 <p class="lead">Level 1 / 10 - <em class="message-level">Petit joueur, t'as au moins commencé à coder ?</em></p>
             {% elseif levelPercentage < 20 %}
-                <p>Level 2 / 10</p>
+                <p class="lead">Level 2 / 10 - <em class="message-level">Ouai bon fais pas le malin</em></p>
             {% elseif levelPercentage < 30 %}
-                <p>Level 3 / 10</p>
+                <p class="lead">Level 3 / 10 - <em class="message-level">Ouai bon fais pas le malin</em></p>
             {% elseif levelPercentage < 40 %}
-                <p>Level 4 / 10</p>
+                <p class="lead">Level 4 / 10 - <em class="message-level">Ouai bon fais pas le malin</em></p>
             {% elseif levelPercentage < 50 %}
-                <p>Level 5 / 10</p>
+                <p class="lead">Level 5 / 10 - <em class="message-level">Ouai bon fais pas le malin</em></p>
             {% elseif levelPercentage < 60 %}
-                <p>Level 6 / 10</p>
+                <p class="lead">Level 6 / 10 - <em class="message-level">Ouai bon fais pas le malin</em></p>
             {% elseif levelPercentage < 70 %}
-                <p>Level 7 / 10</p>
+                <p class="lead">Level 7 / 10 - <em class="message-level">Ouai bon fais pas le malin</em></p>
             {% elseif levelPercentage < 80 %}
-                <p>Level 8 / 10</p>
+                <p class="lead">Level 8 / 10 - <em class="message-level">Ouai bon fais pas le malin</em></p>
             {% elseif levelPercentage < 90 %}
-                <p>Level 9 / 10</p>
+                <p class="lead">Level 9 / 10 - <em class="message-level">Ouai bon fais pas le malin</em></p>
             {% elseif levelPercentage < 100 %}
-                <p>Level 10 / 10</p>
+                <p class="lead">Level 10 / 10 - <em class="message-level">Ouai bon fais pas le malin</em></p>
             {% elseif levelPercentage >= 100 %}
-                <p>Level hum.. / 10</p>
+                <p class="lead">Mec t'es un fouuu !!!</p>
             {% endif %}
             {% if levelPercentage < 33 %}
                 <div class="progress" role="progressbar" tabindex="0" aria-valuenow="{{ levelPercentage }}" aria-valuemin="0" aria-valuetext="50 percent" aria-valuemax="100">
