ajout fos user + fix recherche

--- a/src/AppBundle/Resources/views/App/index.html.twig
+++ b/src/AppBundle/Resources/views/App/index.html.twig
@@ -95,7 +95,7 @@
                             <div class="input-group">
                                 {{ form_row(form.itemType) }}
                                 <div class="input-group-button">
-                                    <input type="submit" value="Ajouter une conso" class="button">
+                                    <input type="submit" value="Ajouter à mes consos" class="button">
                                 </div>
                             </div>
                             {{ form_end(form) }}
