ajout de la page add

--- a/src/AppBundle/Resources/views/App/index.html.twig
+++ b/src/AppBundle/Resources/views/App/index.html.twig
@@ -99,6 +99,7 @@
                                 </div>
                             </div>
                             {{ form_end(form) }}
+                            <p>Tu veux ajouter une conso qui n'est pas dans la liste ? <a href="{{ path('conso_add') }}">click ici</a></p>
                         </td>
                     </tr>
                 </tbody>
