--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -23,7 +23,7 @@
     </div>
     <div class="top-bar-right">
         <ul class="menu">
-            <li><a href="#">Info</a></li>
+            <li><a href="#">Salut {{ app.user.username }}</a></li>
         </ul>
     </div>
 </div>
