--- a/src/AppBundle/Resources/views/App/index.html.twig
+++ b/src/AppBundle/Resources/views/App/index.html.twig
@@ -90,7 +90,7 @@
                     </div>
                 {% endfor %}
                     <tr>
-                        <td colspan="4">
+                        <td colspan="5">
                             {{ form_start(form) }}
                             <div class="input-group">
                                 {{ form_row(form.itemType) }}
@@ -99,7 +99,7 @@
                                 </div>
                             </div>
                             {{ form_end(form) }}
-                            <p>Tu veux ajouter une conso qui n'est pas dans la liste ? <a href="{{ path('conso_add') }}">click ici</a></p>
+                            <p>Tu veux ajouter une conso qui n'est pas dans la liste ? <a href="{{ path('conso_add') }}">clique ici</a></p>
                         </td>
                     </tr>
                 </tbody>
