override form register

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -32,7 +32,7 @@
 <div class="callout large">
     <div class="row column text-center">
         <h1>Moins tu dors, plus t'es fort</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris.</p>
+        <p class="lead">Sponsorisé par saupiquet</p>
     </div>
 </div>
 
