--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -17,7 +17,8 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="_password" required="required" />
 
-            <input type="submit" id="_submit" class="button" name="_submit" value="se connecter" />
+            <input type="submit" id="_submit" class="button" name="_submit" value="Manger" />
+            <p>Si tu n'as pas encore mangé, <a href="{{ path('fos_user_registration_register') }}">c'est ici</a></p>
         </form>
     </div>
 </div>
