Ajout des validators

--- a/src/AppBundle/Resources/views/App/add.html.twig
+++ b/src/AppBundle/Resources/views/App/add.html.twig
@@ -4,7 +4,7 @@
     <div class="row column">
         <div class="medium-6 columns">
             <h3>Ajouter une conso</h3>
-            <p>Libre à vous d'ajouter n'importe quelle conso</p>
+            <p>Libre à vous d'ajouter n'importe quelle conso (attention tout de même elles seront visibles par tous)</p>
             {{ form_start(form) }}
             {{ form_widget(form) }}
             <input type="submit" value="Ajouter" class="button">
