--- a/src/AppBundle/Resources/views/App/classement.html.twig
+++ b/src/AppBundle/Resources/views/App/classement.html.twig
@@ -3,7 +3,25 @@
 {% block content %}
     <div class="row column">
         <div class="medium-6 columns">
-            <h3>Classement</h3>
+            <h3>Classement par calorie ingurgitée</h3>
+            <table>
+                <thead>
+                <tr>
+                    <th>Place</th>
+                    <th>Pseudo</th>
+                    <th>Calorie</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for key, user in userClassement %}
+                    <tr>
+                        <td># {{ key + 1 }}</td>
+                        <td>{{ user.name }}</td>
+                        <td>{{ user.scoreTotal }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
 {% endblock %}
