--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -11,10 +11,10 @@
         <form action="{{ path("fos_user_security_check") }}" method="post">
             <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-            <label for="username">Username</label>
+            <label for="username">Nom d'utilisateur</label>
             <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
 
-            <label for="password">Password</label>
+            <label for="password">Mot de passe</label>
             <input type="password" id="password" name="_password" required="required" />
 
             <input type="submit" id="_submit" class="button" name="_submit" value="Manger" />
