--- a/src/UserBundle/Resources/views/layout.html.twig
+++ b/src/UserBundle/Resources/views/layout.html.twig
@@ -7,15 +7,26 @@
 <link rel="stylesheet" href="{{ asset('assets/font-awesome/css/font-awesome.min.css') }}" />
 <body>
 
-{% if app.request.hasPreviousSession %}
-    {% for type, messages in app.session.flashbag.all() %}
-        {% for message in messages %}
-            <div class="flash-{{ type }}">
-                {{ message }}
-            </div>
-        {% endfor %}
-    {% endfor %}
-{% endif %}
+<div class="top-bar">
+    <div class="top-bar-left">
+        <ul class="menu">
+            <li class="menu-text">Yeti Agency</li>
+        </ul>
+    </div>
+    <div class="top-bar-right">
+        <ul class="menu">
+            <li><a href="{{ path('fos_user_registration_register') }}">S'enregistrer</a></li>
+            <li><a href="{{ path('fos_user_security_login') }}">Login</a></li>
+        </ul>
+    </div>
+</div>
+
+<div class="callout large">
+    <div class="row column text-center">
+        <h1>Moins tu dors, plus t'es fort</h1>
+        <p class="lead">Sponsorisé par saupiquet</p>
+    </div>
+</div>
 <div>
     {% block fos_user_content %}
     {% endblock fos_user_content %}
