--- a/src/UserBundle/Resources/views/layout.html.twig
+++ b/src/UserBundle/Resources/views/layout.html.twig
@@ -10,7 +10,7 @@
 <div class="top-bar">
     <div class="top-bar-left">
         <ul class="menu">
-            <li class="menu-text">Yeti Agency</li>
+            <li><a href="{{ path('homepage') }}">Challenge hackathon</a></li>
         </ul>
     </div>
     <div class="top-bar-right">
@@ -24,7 +24,6 @@
 <div class="callout large">
     <div class="row column text-center">
         <h1>Moins tu dors, plus t'es fort</h1>
-        <p class="lead">Sponsorisé par saupiquet</p>
     </div>
 </div>
 <div>
