--- a/src/AppBundle/Resources/views/App/index.html.twig
+++ b/src/AppBundle/Resources/views/App/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row column">
         <div class="medium-2 columns">
-            <a href="#"><div class="stat">{{ nbCalorie }}</div><span>Calorie Total</span></a>
+            <a href="#"><div class="stat">{{ nbCalorie }}</div><span>Calories Total</span></a>
         </div>
         <div class="medium-10 columns">
             {% if levelPercentage < 10 %}
@@ -111,7 +111,7 @@
                 <tr>
                     <th width="200">Picto</th>
                     <th>Consos</th>
-                    <th width="150">Calorie</th>
+                    <th width="150">Calories</th>
                     <th>Bu / manger le :</th>
                     <th></th>
                 </tr>
