--- a/src/AppBundle/Resources/views/App/index.html.twig
+++ b/src/AppBundle/Resources/views/App/index.html.twig
@@ -112,7 +112,7 @@
                     <th width="200">Picto</th>
                     <th>Consos</th>
                     <th width="150">Calories</th>
-                    <th>Bu / manger le :</th>
+                    <th>Bu / mangé le :</th>
                     <th></th>
                 </tr>
                 </thead>
