--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -3,11 +3,12 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
+
 <div class="row">
     <div class="small-4 large-4 large-offset-4 columns">
+        {% if error %}
+            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
         <form action="{{ path("fos_user_security_check") }}" method="post">
             <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
@@ -19,6 +20,11 @@
 
             <input type="submit" id="_submit" class="button" name="_submit" value="Manger" />
             <p>Si tu n'as pas encore mangé, <a href="{{ path('fos_user_registration_register') }}">c'est ici</a></p>
+            <p>Si t'as la flemme de t'enregistrer, tu peux accéder à l'appli via :</p>
+            <ul>
+                <li>Login : je suis feignant</li>
+                <li>Mdp : je suis feignant</li>
+            </ul>
         </form>
     </div>
 </div>
